release 1.4 (08-2010)
- Fixed issue 575
  https://jersey.dev.java.net/issues/show_bug.cgi?id=575
  Fixed regression in jersey-multipart where @FormDataParam annotated parameters
  were not being recognized resulting in deployment errors or incorrect
  information being passed as the entity parameter.
- Fixed issue 573
  https://jersey.dev.java.net/issues/show_bug.cgi?id=573
  Entities that are defined to be parameterized types with type variable as
  arguments will be resolved, recursively to concrete types where possible.
  For, example List<T> T[], Map<T, T> and Map<T, List<T>> will be resolved,
  when T is a String, to List<String> String[], Map<String, String> and
  Map<String, List<String>>
- Fixed issue 572
  https://jersey.dev.java.net/issues/show_bug.cgi?id=572
  Propagate security context when making internal invocations to match URIs.
- Fixed issue 564
  https://jersey.dev.java.net/issues/show_bug.cgi?id=564
  Modified field injection so that injection will occur independent of the
  field value. Previously injection would only occur if the field value
  was null.
- Support @InjectParam, which has the same semantics as Jersey's @Inject
  but does not conflict with the JSR 330 version. Jersey's @Inject is now
  deprecated.
- Support for @ParentRef to injecting a parent into a sub-resource.
- Fixed issue 563
  https://jersey.dev.java.net/issues/show_bug.cgi?id=563
  When using the low-level Grizzly container injection of GrizzlyRequest
  and GrizzlyResponse are now supported as follows:
    @Context ThreadLocal<GrizzlyRequest> request
    @Context ThreadLocal<GrizzlyResponse> response
  The thread local is required because GrizzlyRequest/Response are classes,
  not interfaces, and therefore cannot be proxied using the Java proxy API.
- Fixed issue 562
  https://jersey.dev.java.net/issues/show_bug.cgi?id=562
  When ServletContainer.FEATURE_FILTER_FORWARD_ON_404 feature is set to true
  and Jersey forwards to the next filter in the chain then the response